--- a/templates/player_form.html
+++ b/templates/player_form.html
@@ -145,6 +145,7 @@
       {{ form.sportdata_enso_url(class="form-control") }}
     </div>
 
+
     <div class="col-12">
         <button class="btn btn-primary" type="submit">{{ _('Save') }}</button>
         <a class="btn btn-outline-secondary" href="{{ url_for('list_players') }}">{{ _('Cancel') }}</a>
@@ -180,6 +181,15 @@
     </div>
   </div>
 </form>
+
+{% if player and session.get('is_admin') %}
+<div class="mt-3">
+  <form method="post" action="{{ url_for('delete_player', player_id=player.id) }}" onsubmit="return confirm('Delete this player and all related records?');" class="d-inline">
+    <input type="hidden" name="csrf_token" value="{{ form.csrf_token._value() }}">
+    <button class="btn btn-danger">Delete Player</button>
+  </form>
+</div>
+{% endif %}
 
 <script>
   const BELT_COLORS = {{ belt_colors_json|safe }};
